# weather-auth-backend

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 018a59cbe754_initial_revision.py  583daae7f89b_add_weather_search_history.py  92f2bc362f36_add_weather_providers.py
src/: config.py  database.py  main.py
src/common/: core.py  crud.py  dependencies.py  exceptions.py  mixin.py
src/db/: base.py  session.py
src/user/: auth.py  core.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/user/core/: hashing.py  security.py
src/user/routers/: admin.py  auth.py  user.py
src/weather/: crud.py  models.py  providers.py  router.py  schemas.py  utils.py  weather_api.py
src/weather/adapters/: base.py  meteo_source.py  open_meteo.py  tomorrow_io.py
src/weather/schemas/: base.py  meteo_source.py  open_meteo.py  tomorrow_io.py
src/weather/utils/: enums.py  open_meteo.py  providers.py  tomorrow_io.py
